[project]
name = "a2o3"
dynamic = ["version"]
description = "Python library for downloading and tweaking EPUBs from AO3."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Anna Lee", email = "ajunelee@outlook.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
python = "3.13"

[tool.hatch.version]
path = "src/a2o3/__about__.py"
