[project]
name = "a2o3"
dynamic = ["version"]
description = "Python library for downloading and tweaking EPUBs from AO3."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Anna Lee", email = "ajunelee@outlook.com"}
]
dependencies = [
    "requests[security]",
    "beautifulsoup4",
    "yaspin",
]

[project.scripts]
a2o3 = "a2o3.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
  "pre-commit",
  "ruff",
  "docformatter",
]

[tool.hatch.version]
path = "src/a2o3/__about__.py"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
